k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fif
  name: ms-hello-word-ci-service
  labels:
    app: ms-hello-word
spec:
  selector:
    app: ms-hello-word  
  type: ClusterIP    
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
